<resources>
    <string name="app_name">membershipBusiness</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_sign_in">Already have an Account?</string>
    <string name="dont_have_an_account_sign_up">Dont have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="last">Last</string>
    <string name="id">ID</string>
    <string name="todo">TODO</string>
    <string name="title1">Manage Your Business Easily
</string>
    <string name="desc11"> Manage your Customers automatically. See all Active or Inactive Customers. Get Business Performance updates and
automatically invite your inactive Customers</string>
    <string name="find">Find Best Services</string>
    <string name="desc2">Automatically Send Emails on their Birthdays
or any Special Offers</string>
    <string name="first_name">Name</string>
    <string name="phone_number">Contact Number</string>
    <string name="we_will_need">We will need Your Information to Begin</string>
    <string name="next">Next</string>
    <string name="birthdate">Enter Your BirthDate</string>
    <string name="account">Account</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="memberships">MemberShips</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="username">Username</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="continue2">Continue</string>
    <string name="title">Title</string>
    <string name="booked_date">Booked Date</string>
    <string name="till_date">Till Date</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="_10">0</string>
    <string name="edit">Edit</string>
    <string name="title2">" Build Connectivity with Customers"</string>
    <string name="customers">Customers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_business_logo">Add Business Logo</string>
    <string name="add_your_business">Add your Business</string>
    <string name="you_have_not_added_business_yet">You have not Added All Business Yet!</string>
    <string name="business_name">Business Name</string>
    <string name="owner">Owner</string>
    <string name="business_description">Business Description</string>
    <string name="business_timing">Timing</string>
    <string name="start_time">Start Time</string>
    <string name="days">Days</string>
    <string name="start_day">Start Day</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="business_contact">Business Contact</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="business_email">Business Email</string>
    <string name="sample_text">Sample Text</string>
    <string name="business_type">Business Type</string>
    <string name="address">Address</string>
    <string name="add_photos">Add photos</string>
    <string name="submit">Submit</string>
    <string name="website_optional">Website(Optional)</string>
    <string name="add_images">Add Images</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="add_your_pan_card_photo">Add Your Pan Card Photo</string>
    <string name="add_addhar_card_photo">Add Addhar Card Photo</string>
    <string name="google_pay_number">Google Pay Number</string>
    <string name="upi_id">Upi ID</string>
    <string name="applicationNotice">Your Application is in Review</string>
    <string name="subNoticeApplication">It may take Few Days</string>
    <string name="total">Total</string>
    <string name="inactive">Inactive</string>
    <string name="add_your_memberships">Add Your Memberships</string>
    <string name="membership_title">Membership Title</string>
    <string name="membership_description">Membership Description</string>
    <string name="end_time">End Time</string>
    <string name="membership_fees">Membership Fees</string>
    <string name="membership_category">Membership Category(Optional)</string>
    <string name="person_capacity">Person capacity</string>
    <string name="membership_duration_in_days">Membership Duration In Days</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_link">Check Your Email, We have sent you a Reset Link</string>
    <string name="notice_user_verify">Check Your Email, We have sent You Verification Link</string>
    <string name="no_data_available">No Data Available</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="google">Google</string>
    <string name="log_into_your_account">Log Into Your Account</string>
    <string name="or_continue_with">or Continue With</string>
    <string name="register_your_account">Register Your Account</string>
</resources>