<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical"
tools:context=".auth.RegisterActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="200dp"
    android:fontFamily="@font/monmedium"
    android:gravity="center_horizontal"
    android:text="@string/register_your_account"
    android:textAlignment="center"
    android:textColor="@color/grey"
    android:textSize="16sp" />

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/email_edit_Reg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/editback"
    android:drawableStart="@drawable/custom_email_icon"
    android:drawableLeft="@drawable/ic_email"
    android:drawablePadding="12dp"
    android:elevation="8dp"
    android:textSize="16sp"

    android:fontFamily="@font/monmedium"
    android:hint="@string/email"
    android:padding="10dp"

    tools:targetApi="lollipop" />

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/password_edit_Reg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/editback"
    android:textSize="16sp"
    android:drawableStart="@drawable/custom_pass_icon"
    android:drawableLeft="@drawable/ic_password"
    android:drawablePadding="10dp"
    android:elevation="8dp"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:padding="10dp"
    tools:targetApi="lollipop" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/btn_Reg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="70dp"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="70dp"
    android:background="@drawable/btn_circular"
    android:fontFamily="@font/monmedium"
    android:onClick="@{()-> viewmodel.register()}"
    android:text="@string/sign_up"
    android:textAllCaps="false"
    android:textColor="@color/white" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/monmedium"
    android:text="@string/or_continue_with"
    android:textAlignment="center"
    android:textColor="@color/grey"
    android:textSize="13sp" />

<androidx.cardview.widget.CardView
    android:id="@+id/btn_google_register"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="90dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="90dp"
    app:cardCornerRadius="30dp"
    tools:targetApi="lollipop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/demoImage"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/googlelogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/monmedium"
            android:gravity="center_horizontal"
            android:text="@string/google"
            android:textAlignment="center"
            android:textColor="#7f7f7f"
            android:textSize="15sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:textSize="12sp" />

<LinearLayout
    android:id="@+id/txt_Reg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/monmedium"
        android:gravity="center"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/monmedium"
        android:text="@string/sign_in"
        android:textColor="@color/blue"
        android:textSize="12sp" />
</LinearLayout>

</LinearLayout>
