<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.android.membershipbusiness.viewModels.AuthViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activities.auth.LoginActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_into_your_account"
            android:layout_marginTop="200dp"
            android:textAlignment="center"
            android:textColor="@color/faintGray"
            android:gravity="center_horizontal"
            android:fontFamily="@font/monmedium"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/custom_email_icon"
                android:hint="@string/email"
                android:elevation="8dp"
                tools:targetApi="lollipop"
                android:padding="10dp"
                android:fontFamily="@font/monmedium"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="20dp"
                android:background="@drawable/editback"
                android:id="@+id/email_edit_log"
                android:text="@={viewmodel.email}"

                android:drawableLeft="@drawable/ic_email">

            </EditText>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_edit_log"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/custom_pass_icon"
                android:text="@={viewmodel.password}"
                android:autofillHints="@string/password"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:elevation="8dp"
                android:background="@drawable/editback"
                android:layout_marginEnd="20dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:fontFamily="@font/monmedium"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_password"
                tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:onClick="@{()-> viewmodel.forgotPassword()}"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            tools:ignore="RtlCompat" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_log"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:onClick="@{()-> viewmodel.login()}"
            android:textAllCaps="false"
            android:fontFamily="@font/monmedium"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_circular"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
      />



<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_marginStart="90dp"-->
<!--            android:layout_marginEnd="90dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="20dp">-->

<!--        </com.google.android.gms.common.SignInButton>-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monmedium"
            android:textSize="13sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:text="@string/or_continue_with"
            android:layout_marginTop="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="90dp"
            android:id="@+id/btn_google_login"
            android:layout_marginEnd="90dp"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="50dp"
            tools:targetApi="lollipop">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
             <ImageView
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:src="@drawable/googlelogo"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="20dp"
                 android:id="@+id/demoImage"
                 android:layout_marginLeft="10dp"
                 android:contentDescription="@string/todo" />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:textAlignment="center"
                  android:text="@string/google"
                  android:textSize="15sp"
                  android:textColor="#7f7f7f"
                  android:fontFamily="@font/monmedium"
                  android:gravity="center_horizontal" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/txt_Log"
                android:text="@string/dont_have_an_account_sign_up"
                android:textSize="12sp"
                android:fontFamily="@font/monmedium"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/blue"
                android:fontFamily="@font/monmedium"
                android:text="@string/sign_up"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

    </LinearLayout>
</layout>
