<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_business_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:drawablePadding="12dp"
            android:hint="@string/business_type"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/business_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monmedium">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:drawablePadding="12dp"
            android:hint="@string/address"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monmedium"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:drawablePadding="12dp"
            android:hint="@string/website_optional"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monmedium"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_images"
                android:id="@+id/tv_addImages"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/monmedium"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/add"
                android:id="@+id/addAllImages"
                android:layout_toEndOf="@+id/tv_addImages"
                android:layout_toRightOf="@+id/tv_addImages"
                android:layout_marginLeft="10dp" />
        </RelativeLayout>

        <ImageSwitcher
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:id="@+id/images"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nav_rel_layout"
            android:visibility="gone"
            android:gravity="center"
            >
        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/back_btn"
            android:textAllCaps="false"
            android:fontFamily="@font/monmedium"
            android:text="@string/back"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            />

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/back_btn"
                android:id="@+id/front_btn"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/back_btn"
                android:layout_marginLeft="20dp"
                android:textAllCaps="false"
                android:fontFamily="@font/monmedium"
                android:text="@string/next" />


        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar_data"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_continue_business3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_circular"
            android:fontFamily="@font/monmedium"
            android:text="@string/continue2"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>