<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.data.AddOwnerData">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profileImage_Data"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/default_user"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_photo"
        android:layout_gravity="center"
        android:fontFamily="@font/monmedium"
        android:text="@string/change_profile_photo"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="13sp"/>





        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monmedium"
            android:hint="@string/first_name"
            android:elevation="8dp"
            tools:targetApi="lollipop"
            android:textSize="16sp"
            android:drawablePadding="12dp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:padding="10dp"
            android:background="@drawable/editback"
            android:id="@+id/addName_data"
            >

        </com.google.android.material.textfield.TextInputEditText>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/phone_number"
            android:id="@+id/addPhone_data"
            android:maxLength="10"
            android:hint="@string/phone_number"
            android:drawablePadding="12dp"
            android:background="@drawable/editback"
            android:elevation="8dp"
            tools:targetApi="lollipop"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/monmedium"
            android:inputType="phone"
            tools:ignore="LabelFor" />


    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/progress_bar_data"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_continue_data"
        android:fontFamily="@font/monmedium"
        android:text="@string/continue2"
        android:textColor="@color/white"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_circular"
        android:textAllCaps="false"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>
</LinearLayout>